# vscode_debugging_configurations

./: .gitignore  README.md
javascript/: Dockerfile  package.json
javascript/src/: app.js
nodets_debug/: package.json  pnpm-lock.yaml  tsconfig.json
nodets_debug/src/: app.ts
python/: README.md  docker-compose.yml  fastapi_demo.py  flask_demo.py
python_debug/: Dockerfile  pyproject.toml  requirements.txt
react/: package-lock.json
react-debug/src/: App.js
svelte/: README.md
vue/: .gitignore  package-lock.json  package.json
